--- a/KorisnickiProekt/KorisnickiProekt.csproj
+++ b/KorisnickiProekt/KorisnickiProekt.csproj
@@ -53,6 +53,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Results.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Results.Designer.cs">
+      <DependentUpon>Results.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestDNA.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Results.resx">
+      <DependentUpon>Results.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestDNA.resx">
       <DependentUpon>TestDNA.cs</DependentUpon>
     </EmbeddedResource>
@@ -123,6 +132,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Ord._Prof._Mukrimin_Halil_Yinanc_Kutuphanesi_site_link_1507042248572310.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tick-128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\103014-3d-glossy-green-orb-icon-alphanumeric-word-ok1-sc49.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
